--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"postinstall": "npm run build"
+		"postinstall": "npm start"
 	},
 	"engines": {
 		"node": "4.4.5"
