--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "useragent": "^2.3.0"
   },
   "main": "server.js",
   "scripts": {
